removed old pages and added new travel site

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/crewpage.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/travel.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Crew 612</h4>
+                        <h4>Island Travel Agency</h4>
                         <p class="text-muted">Web Development</p>
                     </div>
                 </div>
@@ -382,13 +382,13 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Crew 612</h2>
+                            <h2>Island Travel Agency</h2>
                             <p class="item-intro text-muted">Web Development</p>
-                            <a href="http://crew612.bitballoon.com"><img class="img-responsive img-centered" src="img/portfolio/crewpage.png" alt="crew 612 page"></a>
-                            <p>I developed a website for the philanthropy brotherhood group called Crew 612. Based in the Northern Virginia metropolitan area, this crew focuses on giving back to the community around them through hosting fundraising events and participating in charity events.</p>
+                            <a href="http://islandtravel.bitballoon.com/"><img class="img-responsive img-centered" src="img/portfolio/travel.png" alt="island travel agency"></a>
+                            <p>Island Travel Agency is located in Hawaii and specializes in providing a top notch Hawaiian experience.</p>
                             <ul class="list-inline">
                                 <li><strong>Date:</strong> August 2015</li>
-                                <li><strong>Client:</strong> Crew 612</li>
+                                <li><strong>Client:</strong> Island Travel Agency</li>
                                 <li><strong>Category:</strong> Web Development</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
